@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2471] Feature: Mappers should be able to return a result list for an array of arrays with model data
 - [#2764] Feature: Add internal functions for the DataMapper to create models from arrays of data
 - [#2767] Feature: Add a "readOnly" flag to models
 - [#2771] Feature: Add function setToDeleted to the model
